@@ -34,6 +34,15 @@ def internal_server_error(req):
         return "500 - Service Unavailable", 500
 
 
+@app.http_state(400)
+def bad_request(req, error=None):
+    """Bad request handler"""
+    assert req
+    if error:
+        log.error("%s", error)
+    return make_response("Bad Request", status_code=400)
+
+
 @app.http_state(403)
 def forbidden(req):
     """Error handler 403 forbidden."""
@@ -53,6 +62,24 @@ def gone(req):
     """Error handler for 410 Gone."""
     return make_response(generate_page(req, "error410.html", error=exc_info()),
                          status_code=410)
+
+
+@app.http_state(411)
+def length_required(req, error=None):
+    """Bad request handler"""
+    assert req
+    if error:
+        log.error("%s", error)
+    return make_response("length required", status_code=411)
+
+
+@app.http_state(413)
+def payload_too_large(req, error=None):
+    """Bad request handler"""
+    assert req
+    if error:
+        log.error("%s", error)
+    return make_response("Payload Too Large", status_code=413)
 
 
 @app.http_state(503)
